# heterogeneous-multicore

./: .gitignore  README.md  SBOM.spdx.json  SCR-heterogeneous-multicore.txt  build_all.sh  build_apps.sh  west.yml
apps/hello_world/freertos/boards/evkmimx8mm_ca53/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh  build_ddr_release.sh
apps/hello_world/zephyr/: CMakeLists.txt  RAM_CONSOLE.conf  main.c  prj.conf
apps/hello_world/zephyr/boards/: imx8m_evk_a53_RAM_CONSOLE.overlay  imx8m_evk_a53_UART2.overlay  imx8mm_evk_mimx8mm6_a53.overlay  imx8mm_evk_mimx8mm6_m4.conf  imx8mp_evk_mimx8ml8_a53.overlay  imx8mp_evk_mimx8ml8_a53_smp.overlay  imx8mp_evk_mimx8ml8_a53_smp_4cores.overlay  imx93_evk_a55_RAM_CONSOLE.overlay  imx93_evk_a55_UART1.overlay  imx93_evk_a55_UART2.overlay  imx93_evk_mimx9352_a55_smp.overlay  imx943_evk_a55_RAM_CONSOLE.overlay  imx943_evk_a55_UART1.overlay  imx943_evk_a55_UART8.overlay  imx943_evk_mimx94398_a55.overlay  imx943_evk_mimx94398_m33.conf  imx95_evk_a55_RAM_CONSOLE.overlay  imx95_evk_a55_UART1.overlay  imx95_evk_a55_UART3.overlay  imx95_evk_mimx9596_a55.overlay  imx95_evk_mimx9596_a55_smp_2cores.overlay  imx95_evk_mimx9596_m7.conf  mimx8m_evk_a53_RAM_CONSOLE.overlay  mimx8m_evk_a53_UART4.overlay  mimx8mm_evk_a53.overlay  mimx8mp_evk_a53.overlay  mimx93_evk_a55.overlay  mimx93_evk_a55_RAM_CONSOLE.overlay
apps/hello_world/zephyr/boards/evkmimx8mm/cm4/: app_board.h
apps/hello_world/zephyr/boards/evkmimx8mm_ca53/: app_board.h  rtos_memory.h
apps/hello_world/zephyr/boards/evkmimx8mm_ca53/armgcc_aarch64/: build_release.sh
apps/hello_world/zephyr/boards/evkmimx8mp_ca53/: rtos_memory.h
apps/hello_world/zephyr/boards/evkmimx8mp_ca53/armgcc_aarch64/: build_release.sh
apps/hello_world/zephyr/boards/imx943evk/ca55/: app_board.h  rtos_memory.h
apps/hello_world/zephyr/boards/imx943evk/cm33_core1/: app_board.h
apps/hello_world/zephyr/boards/imx95lpd5evk19/ca55/: rtos_memory.h
apps/hello_world/zephyr/boards/mcimx91evk/armgcc_aarch64/: build_release.sh
apps/hello_world/zephyr/boards/mcimx91evk_ca55/armgcc_aarch64/: build_release.sh
apps/hello_world/zephyr/boards/mcimx91qsb/armgcc_aarch64/: build_release.sh
apps/hello_world/zephyr/boards/mcimx91qsb_ca55/: app_board.h
apps/hello_world/zephyr/boards/mcimx91qsb_ca55/armgcc_aarch64/: build_release.sh
apps/hello_world/zephyr/boards/mcimx93evk/ca55/: app_board.h  rtos_memory.h
apps/hello_world/zephyr/boards/mcimx93evk_ca55/armgcc_aarch64/: build.sh  build_release.sh
apps/hello_world/zephyr/boards/mcimx95evk_ca55/armgcc_aarch64/: build_release.sh  clean.sh
apps/lwip_ping/freertos/boards/mcimx93evk_ca55/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh
apps/rpmsg_perf/freertos/boards/evkmimx8mp_ca53/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh  build_ddr_release.sh
apps/rpmsg_str_echo/freertos/boards/evkmimx8mp_ca53/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh  build_ddr_release.sh
apps/rpmsg_str_echo/freertos/boards/evkmimx8mp_cm7/armgcc/: CMakeLists.txt  build_debug.sh
apps/rpmsg_str_echo/zephyr/: CMakeLists.txt  RAM_CONSOLE.conf  main.c  prj.conf
apps/rpmsg_str_echo/zephyr/boards/: imx8m_evk_a53_RAM_CONSOLE.overlay  imx8m_evk_a53_UART2.overlay  imx8m_evk_a53_UART4.overlay  imx8mp_evk_mimx8ml8_a53.conf  imx8mp_evk_mimx8ml8_a53.overlay  imx93_evk_a55_RAM_CONSOLE.overlay  imx93_evk_a55_UART1.overlay  imx93_evk_a55_UART2.overlay  imx93_evk_mimx9352_a55.overlay  imx95_evk_a55_RAM_CONSOLE.overlay  imx95_evk_a55_UART1.overlay  imx95_evk_a55_UART3.overlay  imx95_evk_mimx9596_a55.conf  imx95_evk_mimx9596_a55.overlay  imx95_evk_mimx9596_m7.conf
apps/rpmsg_str_echo/zephyr/boards/evkmimx8mp/ca53/: app_board.h  app_rpmsg.h  rtos_memory.h
apps/rpmsg_str_echo/zephyr/boards/evkmimx8mp_ca53/armgcc_aarch64/: build_release.sh
apps/rpmsg_str_echo/zephyr/boards/imx95lpd5evk19/ca55/: app_board.h  app_rpmsg.h  rtos_memory.h
apps/rpmsg_str_echo/zephyr/boards/imx95lpd5evk19/cm7/: app_board.h  app_rpmsg.h
apps/rpmsg_str_echo/zephyr/boards/mcimx93evk/ca55/: app_rpmsg.h
apps/rpmsg_str_echo/zephyr/boards/mcimx93evk_ca55/: rtos_memory.h
apps/rpmsg_str_echo/zephyr/boards/mcimx93evk_ca55/armgcc_aarch64/: build_release.sh
apps/rpmsg_uart_sharing/freertos/boards/mcimx93evk_cm33/armgcc/: CMakeLists.txt  config.cmake
apps/rt_latency/freertos/boards/mcimx91evk_ca55/armgcc_aarch64/: CMakeLists.txt
apps/rt_latency/freertos/boards/mcimx95evk_ca55/armgcc_aarch64/: CMakeLists.txt  config.cmake
apps/rt_latency/zephyr/: CMakeLists.txt  main.c  prj.conf  prj_debug.conf
apps/rt_latency/zephyr/boards/: imx8mp_evk_mimx8ml8_a53.conf  imx91_qsb_mimx9111.conf  imx93_evk_mimx9352_a55.conf  imx943_evk_mimx94398_a55.overlay  imx95_evk_mimx9596_a55.overlay  mimx8mp_evk_a53.conf  mimx93_evk_a55.conf
apps/rt_latency/zephyr/boards/evkmimx8mm_ca53/armgcc_aarch64/: build.sh  build_debug.sh  build_release.sh
apps/rt_latency/zephyr/boards/evkmimx8mp_ca53/armgcc_aarch64/: build.sh  build_debug.sh  build_release.sh
apps/rt_latency/zephyr/boards/mcimx91evk/armgcc_aarch64/: build_release.sh  clean.sh
apps/rt_latency/zephyr/boards/mcimx91evk_ca55/armgcc_aarch64/: build_debug.sh  build_release.sh
apps/rt_latency/zephyr/boards/mcimx91qsb/armgcc_aarch64/: build_release.sh
apps/rt_latency/zephyr/boards/mcimx91qsb_ca55/armgcc_aarch64/: build_debug.sh  build_release.sh
apps/rt_latency/zephyr/boards/mcimx93evk_ca55/armgcc_aarch64/: build.sh  build_debug.sh  build_release.sh
apps/rt_latency/zephyr/boards/mcimx95evk_ca55/armgcc_aarch64/: build_debug.sh  build_gcov.sh  build_release.sh  clean.sh
apps/soem_servo/zephyr/: CMakeLists.txt  main.c  prj.conf  servo.c
apps/soem_servo/zephyr/boards/: imx8mp_evk_mimx8ml8_a53.conf  imx93_evk_mimx9352_a55.conf  imx95_evk_mimx9596_a55.conf  imx95_evk_mimx9596_a55.overlay  tpm.dtsi
mailbox/: generic_software_mailbox.c  (+3 more)
net/boards/evkmimxrt1180/cm33/: CMakeLists.txt
net/boards/evkmimxrt1180/cm33/mcux/: Kconfig  mcux_virtual_switch.cmake
net/boards/evkmimxrt1180_cm33/: CMakeLists.txt
net/boards/evkmimxrt1180_cm33/mcux/: mcux_virtual_switch.cmake
(+962 files in other folders)
